2008-06-06  Robert Blaut  <webkit@blaut.biz>

        Reviewed by Darin Adler.

        Test for https://bugs.webkit.org/show_bug.cgi?id=19407 
        CSS3 Selector Test: *= ~= ^= $= should all accept the empty string, but match nothing.

        * fast/css/begin-end-contain-selector-empty-value.html: Added.
        * platform/mac/fast/css/begin-end-contain-selector-empty-value-expected.txt: Added.

2008-06-06  Anthony Ricaud  <rik24d@gmail.com>

        Reviewed by adele.  Landed by eseidel.

        https://bugs.webkit.org/show_bug.cgi?id=18337
        
        Checks that onchange fires when typing the name of an option and doesn't fire when leaving the listbox.
        
        * fast/forms/listbox-onchange-expected.txt:
        * fast/forms/listbox-onchange.html:

2008-06-06  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by John.

        <rdar://problem/5890684> REGRESSION(r23969): Deleting a line break changes the style of text after the break
        
        * editing/deleting/5890684-expected.txt: Added.
        * editing/deleting/5890684.html: Added.

2008-06-06  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Darin.

        <https://bugs.webkit.org/show_bug.cgi?id=19087>
        Editing crash in IndentOutdentCommand::prepareBlockquoteLevelForInsertion, ASSERT in debug mode
        
        * editing/execCommand/19087-expected.txt: Added.
        * editing/execCommand/19087.html: Added.

2008-06-06  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Alexey.

        xmlhttprequest-onProgress-open-should-zero-length.html supposes that the onprogress event
        is dispatched 3 times to test that the position is reset when XMLHttpRequest.open() is
        called.
        The test was failing because CoreFoundation keeps the data if they are not big enough
        (which led to only 1 progress event dispatched).

        We now generate a big response instead of a small one.
