@@ -25,4 +25,22 @@ shouldBe('(function(){ leftRight = ""; left() & right(); return leftRight; })()'
 shouldBe('(function(){ leftRight = ""; left() | right(); return leftRight; })()', '"LeftRight"');
 shouldBe('(function(){ leftRight = ""; left() ^ right(); return leftRight; })()', '"LeftRight"');
 
+function testEvaluationOfArguments()
+{
+    function throwPass()
+    {
+        throw "PASS";
+    }
+    
+    var nonFunction = 42;
+    
+    try {
+        nonFunction(throwPass());
+    } catch (e) {
+        return e == "PASS";
+    }
+}
+
+shouldBeTrue("testEvaluationOfArguments()");
+
 var successfullyParsed = true;
